edited  menu bottom bar

--- a/app/src/main/res/layout/app_fragment.xml
+++ b/app/src/main/res/layout/app_fragment.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/event_card" />
+
+            tools:listitem="@layout/post_card" />
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
