--- a/app/src/main/res/menu/menu_new_post_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_new_post_bottom_bar.xml
@@ -6,25 +6,25 @@
         android:contentDescription="@string/desc_icon_take_a_photo"
         android:icon="@drawable/ic_photo_camera_24dp"
         android:title="@string/text_menu_item_take_a_photo"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/load_attachment"
         android:contentDescription="@string/desc_icon_attachment"
         android:icon="@drawable/ic_attach_file_24dp"
         android:title="@string/text_menu_item_load_attachment"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/mention"
         android:contentDescription="@string/desc_icon_mentioned"
         android:icon="@drawable/ic_people_24dp"
         android:title="@string/text_menu_item_mention"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/post_geolocation"
         android:contentDescription="@string/desc_screen_geo_location"
         android:icon="@drawable/ic_location_pin_24dp"
         android:title="Post Geolocation"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
