--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -41,7 +41,7 @@
                 android:singleLine="true"
                 android:textSize="@dimen/size_text_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/DatePostTV"
+                app:layout_constraintBottom_toTopOf="@+id/PublishedPostTV"
                 app:layout_constraintEnd_toStartOf="@id/MenuIB"
                 app:layout_constraintStart_toEndOf="@id/AvatarIV"
                 app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +49,7 @@
                 tools:text="Albert Ablyaev" />
 
             <TextView
-                android:id="@+id/DatePostTV"
+                android:id="@+id/PublishedPostTV"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/element_spacing"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="AvatarIV,DatePostTV,MenuIB" />
+                app:constraint_referenced_ids="AvatarIV,PublishedPostTV,MenuIB" />
 
             <TextView
                 android:id="@+id/TextPostTV"
