--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -4,6 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
     app:startDestination="@id/postNavigation">
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="ru.shelq.nework.ui.auth.SingInFragment"
+        android:label="@string/title_login_button"
+        tools:layout="@layout/sign_in_fragment">
+        <action
+            android:id="@+id/action_signInFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="ru.shelq.nework.ui.auth.SignUpFragment"
+        android:label="@string/title_reg"
+        tools:layout="@layout/sign_up_fragment" />
+
+
+
+
     <navigation
         android:id="@+id/postNavigation"
         app:startDestination="@id/postFragment">
