--- a/app/src/main/res/menu/menu_app_top_bar.xml
+++ b/app/src/main/res/menu/menu_app_top_bar.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <group android:id="@+id/unauthenticated">
         <item
