--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,14 @@
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
     </style>
+    <style name="OverFlow" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_account_circle_24dp</item>
+    </style>
+    <style name="Toolbar" parent="@style/Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@color/appbar_color</item>
+        <item name="titleTextColor">@color/header_text_color</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="actionOverflowButtonStyle">@style/OverFlow</item>
+    </style>
 </resources>
