--- a/app/src/main/res/layout/post_details_fragment_.xml
+++ b/app/src/main/res/layout/post_details_fragment_.xml
@@ -43,7 +43,7 @@
                 android:layout_marginTop="@dimen/element_spacing"
                 android:layout_marginBottom="@dimen/common_spacing"
                 android:contentDescription="@string/desc_avatar_image"
-                android:src="@drawable/img_test_avatar"
+                tools:src="@drawable/img_test_avatar"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
