--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -62,7 +62,7 @@
 
             <ImageButton
                 android:id="@+id/MenuIB"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/element_spacing"
@@ -150,7 +150,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/ShareIB"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_spacing"
