--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,8 @@
         <item name="android:textColor">@color/primary</item>
         <item name="android:minWidth">0dp</item>
         <item name="android:minHeight">@dimen/icon_min_height</item>
-        <item name="android:insetTop">0dp</item>
+        <item name="android:insetTop">10dp
+        </item>
         <item name="android:insetBottom">0dp</item>
     </style>
     <style name="OverFlow" parent="Widget.AppCompat.ActionButton.Overflow">
